# novita-sdk-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEGEN.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  TEST_STATUS.md  analyze_coverage.py  prompt.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: COMMIT_GUIDELINES.md  dependabot.yml
.github/workflows/: ci.yaml  cleanup-test-resources.yml  integration-test.yaml  lint.yaml  publish-pypi.yaml  test.yaml  typecheck.yaml
docs/: MODEL_ORGANIZATION.md
examples/: README.md  basic_async.py  basic_sync.py  context_managers.py  error_handling.py  instance_lifecycle.py  pricing_and_types.py  resource_based_api.py
openapi/: api.txt  novita-api.yaml
scripts/: apply_model_fixes.py  apply_price_conversions.py  cleanup_test_resources.py  fetch_all_docs.py  generate_models.sh
src/novita/: __init__.py  client.py
src/novita/api/: gpu.py
src/novita/api/resources/gpu/: __init__.py  base.py  clusters.py  endpoints.py  images.py  instances.py  jobs.py  metrics.py  networks.py  products.py  registries.py  ssh_keys.py  storages.py  templates.py
src/novita/models/: __init__.py  common.py  gpu.py
tests/: README.md  conftest.py  test_client.py  test_gpu_api.py
tests/integration/: COVERAGE.md  README.md  __init__.py  conftest.py  test_clusters.py  test_endpoints.py  test_image_prewarm.py  test_image_registry.py  test_instances.py  test_jobs.py  test_metrics.py  test_network_storage.py  test_networks.py  test_products.py  test_templates.py  test_utils.py  utils.py
tests/unit/: test_client.py  test_gpu_clusters.py  test_gpu_endpoints.py  test_gpu_images.py  test_gpu_instances.py  test_gpu_jobs.py  test_gpu_metrics.py  test_gpu_networks.py  test_gpu_products.py  test_gpu_registries.py  test_gpu_ssh_keys.py  test_gpu_storages.py  test_gpu_templates.py  test_instances_ssh.py  test_package_imports.py
