[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novita-sdk-python"
version = "0.1.0"
description = "(Unofficial) Modern Python SDK for the Novita AI API"
authors = [
    { name = "Ronny Unger", email = "phpworkx@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["novita", "ai", "api", "sdk", "machine-learning", "gpu-cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.7.0",
    "pytest-cov>=4.1.0",
    # Code generation tools (not needed at runtime)
    "datamodel-code-generator>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/php-workx/novita-sdk-python"
Documentation = "https://novita.ai/docs/api-reference/"
Repository = "https://github.com/php-workx/novita-sdk-python"
Issues = "https://github.com/php-workx/novita-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/novita/generated/*.py" = [
    "E501",  # Line too long (generated code)
    "F401",  # Unused imports
    "F403",  # Star imports
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

# Generated code - less strict checking
[[tool.mypy.overrides]]
module = "novita.generated.*"
ignore_errors = false
warn_return_any = false
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# Ensure tests never make real HTTP requests
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
